@@ -69,4 +69,15 @@ class EJBQLOrderByTranslator extends EJBQLBaseVisitor {
         expression.visit(childVisitor);
         return false;
     }
+
+    @Override
+    public boolean visitDbPath(EJBQLExpression expression, int finishedChildIndex) {
+        expression.visit(new EJBQLDbPathTranslator(context) {
+            @Override
+            protected void appendMultiColumnPath(EJBQLMultiColumnOperand operand) {
+                throw new EJBQLException("Can't order on multi-column paths or objects");
+            }
+        });
+        return false;
+    }
 }
